# Rust-Chess-GUI

./: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  verification_report.md  verify_pv_board.py
.github/workflows/: build.yml
src/: App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tournament.pgn
src-tauri/capabilities/: default.json
src-tauri/src/: arbiter.rs  check_variant.rs  lib.rs  main.rs  mock_engine.rs  sprt.rs  stats.rs  test_integration.rs  types.rs  uci.rs
src-tauri/tests/: integration_test.rs
src/components/: Board.tsx  BottomPanel.tsx  Clock.tsx  EngineManager.tsx  EnginePanel.tsx  EvalGraph.tsx  EvalMovePanel.tsx  Flag.tsx  MoveList.tsx  PvBoard.tsx  SettingsModal.tsx  StatsPanel.tsx
src/utils/: formatTime.ts
