[package]
name = "mini-tcec"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "mini-tcec"

[lib]
name = "mini_tcec_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mock-engine"
path = "src/mock_engine.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
shakmaty = "0.26"
chrono = "0.4"
anyhow = "1.0"
tauri-plugin-store = "2.0.0-rc"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2.4.2"
