[package]
name = "ccrl-gui"
version = "0.1.0"
description = "A Tauri App"
authors = ["Basti"]
edition = "2021"
default-run = "ccrl-gui"

[lib]
name = "mini_tcec_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mock-engine"
path = "src/mock_engine.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
shakmaty = { version = "0.26", features = ["variant"] }
chrono = "0.4"
anyhow = "1.0"
tauri-plugin-store = "2"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2.4.2"
rand = "0.9.2"
